objects/ffct__ConnectionsCustomField__c.object
<CustomObject>
    <description>Details of fields on a custom object referenced in a connection.</description>
    <fields>
        <fullName>ffct__CustomObject__c</fullName>
        <label>Connection&apos;s Custom Object</label>
        <referenceTo>ffct__ConnectionsCustomObject__c</referenceTo>
        <relationshipLabel>Connection&apos;s Custom Fields</relationshipLabel>
        <relationshipName>Connection_Custom_Fields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffct__Field_Id__c</fullName>
        <label>Field Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Namespace_Prefix__c</fullName>
        <label>Namespace Prefix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffct__Table_Enum_Or_Id__c</fullName>
        <label>Table Enum Or Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Connection&apos;s Custom Field</label>
    <listViews>
        <fullName>ffct__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Connection&apos;s Custom Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Connection&apos;s Custom Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>